--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,119 @@
 .App {
   text-align: center;
 }
+
+body {
+  background-image: url('../src/images/background.png');
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+h2 {
+  color: white;
+}
+
+header {
+  /* height: 180px; */
+  display: flex;
+  justify-content: center;
+  width: auto;
+  color: white;
+  font-weight: 600;
+}
+
+header h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+  border: 4px solid;
+  border-radius: 100% 20%;
+}
+
+.container-planets {
+  display: block;
+}
+
+.circle-container {
+  position: relative;
+  width: 24em;
+  height: 24em;
+  /* padding: 4.2em; */
+  /*2.8em = 2em*1.4 (2em = half the width of a link with img, 1.4 = sqrt(2))*/
+  /* border: dashed 1px; */
+  border-radius: 50%;
+  margin: 1.75em auto 0;
+  /* padding-bottom: 400px; */
+}
+
+.circle-container div {
+  display: block;
+  position: absolute;
+  top: 50%; left: 46%;
+  width: 8em; height: 8em;
+  margin: -3em;
+}
+
+.circle-container img { 
+  display: block; 
+  width: 100%;
+  -webkit-transition: -webkit-transform .5s ease;
+  transition: transform .5s ease;
+}
+
+.circle-container img:hover {
+  -webkit-transform: scale(1.8);
+  -moz-transform: scale(1.8);
+  -o-transform: scale(1.8);
+  -ms-transform: scale(1.8);
+  transform: scale(1.8);
+}
+.circle-container p {  color: white; position: relative; top: 100%; left: 50%; }
+.deg0 { transform: translate(12em); } /* 12em = half the width of the wrapper */
+.deg45 { transform: rotate(45deg) translate(12em) rotate(-45deg); }
+.deg90 { transform: rotate(90deg) translate(12em) rotate(-90deg); }
+.deg135 { transform: rotate(135deg) translate(12em) rotate(-135deg); }
+.deg180 { transform: translate(-12em); }
+.deg225 { transform: rotate(225deg) translate(12em) rotate(-225deg); }
+.deg270 { transform: rotate(270deg) translate(12em) rotate(-270deg); }
+.deg315 { transform: rotate(315deg) translate(12em) rotate(-315deg); }
+
+.bloco {
+  padding-top: 200px;
+}
+
+.missoes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: space-around;
+  width: 1200px;
+  height: 1360px;
+  background-color: rgb(255, 255, 255, 0.6);
+  border-style: ridge;
+  border-radius: 10px;
+}
+
+.mission_card {
+  margin-top: 20px;
+  width: 300px;
+  height: 160px;
+  text-align: center;
+  border: solid 2px;
+  border-style: ridge;
+  border-radius: 20px;
+  background-color: rgb(106, 102, 102);
+}
+
+.mission_card:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
