estilização dos componenetes

--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,16 @@ body {
 
 h2 {
   color: white;
+  text-align: center;
+  font-size: 26px;
+  text-shadow:  1px -1px 0 rgba(254, 225, 3, 0.801)
 }
 
 header {
   /* height: 180px; */
   display: flex;
   justify-content: center;
-  width: auto;
+  width: 100%;
   color: white;
   font-weight: 600;
 }
@@ -107,7 +110,7 @@ header h1 {
   border: solid 2px;
   border-style: ridge;
   border-radius: 20px;
-  background-color: rgb(106, 102, 102);
+  background-color: rgb(246, 238, 238);
 }
 
 .mission_card:hover {
@@ -116,4 +119,34 @@ header h1 {
   -o-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+@media (max-width: 915px) {
+  body {
+    padding-left: 100px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .missoes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255, 0.6);
+    border-style: ridge;
+    border-radius: 10px;
+  }
+  .mission_card {
+    margin-top: 20px;
+    width: 80%px;
+    height: auto;
+    text-align: center;
+    border: solid 2px;
+    border-style: ridge;
+    border-radius: 20px;
+    background-color: rgb(246, 238, 238);
+  }
 }
